--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "node-debugger",
+  "name": "elk-node-demo",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@koa/router": "^9.1.0",
     "chalk": "^4.1.0",
     "config-lite": "^3.0.0",
+    "elastic-apm-node": "^3.6.1",
     "koa": "^2.13.0",
     "koa-await-breakpoint": "^1.1.0",
-    "koa-bodyparser": "^4.3.0",
+    "koa-body": "^4.2.0",
     "log4js": "^6.3.0",
     "logstash-client": "^1.1.1",
     "mongoose": "^5.9.21"
