--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "mongoose": "^5.9.21"
   },
   "scripts": {
-    "start": "NODE_ENV=dev DEBUG=koa-await-breakpoint node index.js"
+    "start": "node index.js"
   }
 }
